--- a/reviews.html
+++ b/reviews.html
@@ -23,19 +23,19 @@
         <h2 class="product-name">
             Watch6
         </h2>
-        <video controls width="70%" src="./video/Watch6-review.mp4"></video>
+        <video class="review-video" controls width="70%" src="./video/Watch6-review.mp4"></video>
     </div>
     <div class="review-container">
         <h2 class="product-name">
             AirPodspro
         </h2>
-        <video controls width="70%" src="./video/AirPodsPro-review.mp4"></video>
+        <video class="review-video" controls width="70%" src="./video/AirPodsPro-review.mp4"></video>
     </div>
     <div class="review-container">
         <h2 class="product-name">
             AirPods2
         </h2>
-        <video controls width="70%" src="./video/AirPods2-review.mp4"></video>
+        <video class="review-video" controls width="70%" src="./video/AirPods2-review.mp4"></video>
     </div>
 </body>
 </html>
